TYP-2: create grid system

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,6 +1,12 @@
+@import '../../assets/variables';
+
 .header {
-    height: 70px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    background-color: $royal-blue;
+
+    &_inner {
+        height: 70px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
 }
