sidebar grid and grid changes

--- a/src/components/Logo/Logo.module.scss
+++ b/src/components/Logo/Logo.module.scss
@@ -1,6 +1,6 @@
-@import '../../assets/variables';
+@import '../../assets/styles/variables';
 
 .logo {
-    font: 32px $logo-font-family;
+    font: 28px $logo-font-family;
     color: $pale-yellow;
 }
