--- a/src/assets/styles/_preset.scss
+++ b/src/assets/styles/_preset.scss
@@ -14,10 +14,21 @@ body {
 
 body {
     margin: 0;
+    padding: 0;
     font: 16px $base-font-family;
 }
 
 ul {
     padding: 0;
+    margin: 0;
     list-style: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0 0 12px;
 }
