--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,10 +1,12 @@
-@import '../../assets/variables';
+@import '../../assets/styles/variables';
 
 .header {
     background-color: $royal-blue;
+    flex-shrink: 1;
+    width: 100%;
 
     &_inner {
-        height: 70px;
+        height: 50px;
         display: flex;
         align-items: center;
         justify-content: space-between;
