--- a/src/components/MainNavigation/MainNavigation.module.scss
+++ b/src/components/MainNavigation/MainNavigation.module.scss
@@ -1,14 +1,4 @@
-@import '../../assets/variables';
-
-.list {
-    display: flex;
-    align-items: center;
-    margin: 0 -12px;
-}
-
-.item {
-    padding: 0 12px;
-}
+@import '../../assets/styles/variables';
 
 .link {
     position: relative;
@@ -16,32 +6,35 @@
     color: $pale-yellow;
     font-size: 18px;
     font-weight: bold;
+    height: 40px;
+    padding: 0 12px 0 20px;
+    display: flex;
+    align-items: center;
 
     &:before {
-        transition: width .3s;
+        transition: height .3s;
         content: '';
-        height: 2px;
         background-color: $pale-yellow;
-        width: 0;
+        width: 4px;
         display: block;
         position: absolute;
         left: 0;
-        top: calc(100% + 2px);
+        top: 0;
+        height: 0;
     }
 
     &:hover {
 
         &:before {
-            width: 100%;
+            height: 100%;
+        }
+    }
+
+    &:global(.active) {
+        
+        &:before {
+            height: 100%;
         }
     }
 }
 
-:global {
-    .active {
-        
-        &:before {
-            width: 100%;
-        }
-    }
-}
