--- a/src/assets/styles/_grid.scss
+++ b/src/assets/styles/_grid.scss
@@ -1,11 +1,11 @@
 .container {
-    max-width: 100%;
+    width: 100%;
     height: 100%;
-    width: 1480px;
+    max-width: 1480px;
     padding: 0 15px;
 
     &_max {
         @extend .container;
-        width: 100%;
+        max-width: 100%;
     }
 }
