--- a/src/assets/styles/_grid.scss
+++ b/src/assets/styles/_grid.scss
@@ -2,10 +2,58 @@
     width: 100%;
     height: 100%;
     max-width: 1480px;
+    display: flex;
+    align-items: stretch;
     padding: 0 15px;
 
     &_max {
         @extend .container;
+        max-width: 100%;
+    }
+
+    &_grid {
+        width: 100%;
+        height: 100%;
+        max-width: 1480px;
+        display: grid;
+        grid-auto-columns: 1fr;
+    }
+}
+
+// COLUMN SYSTEM
+$col-sizes:
+    1 2,
+    1 3,
+    1 4,
+;
+
+@each $numerator, $denominator in $col-sizes {
+    .col-#{$numerator}-#{$denominator} {
+        max-width: calc((#{$numerator} / #{$denominator}) * 100%);
+    }
+}
+
+@each $numerator, $denominator in $col-sizes {
+    .col--mob-#{$numerator}-#{$denominator} {
+
+        @media(max-width: 768px) {
+            max-width: calc((#{$numerator} / #{$denominator}) * 100%);
+        }
+    }
+}
+
+[class^="col"] {
+    width: 100%;
+    padding: 0 15px;
+}
+
+.col-fullw {
+    max-width: 100%;
+}
+
+.col--mob-fullw {
+
+    @media(max-width: 1023px) {
         max-width: 100%;
     }
 }
