--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -1,4 +1,4 @@
-@import '../../assets/styles/variables';
+@import '../../../assets/styles/variables';
 
 .header {
     background-color: $royal-blue;
